# bereshit-rust

./: README.md
a0/src/: main.rs
a01-ex-enum/: Cargo.toml
a01-ex-enum/src/: main.rs
a02-results/src/: data.txt  main.rs  orir.rs
a03-devide-0/src/: main.rs
a1-hello/src/: main.rs
a10-vec/src/: main.rs
a11-input/src/: main.rs
a2-vars/src/: main.rs
a3-sum-of-numbers/src/: main.rs
a4-if-else/src/: main.rs
a5-match/src/: main.rs
a6-for/src/: main.rs
a7-while/src/: main.rs
a8-loop/src/: main.rs
a9-array/src/: main.rs
b1-owner/src/: main.rs
b2-struct/src/: main.rs  user.rs
b4-struct-empty/src/: main.rs  user.rs
b5-struct-composition/src/: main.rs  user.rs  worker.rs
b6-struct-composition.rs/src/: main.rs  worker.rs
b7-exe.rs/src/: address.rs  car.rs  company.rs  main.rs  person.rs
c2-err_ok/app/: Cargo.toml
d1_server/: Cargo.toml
d1_server/src/: main.rs
d2_serde_json/: Cargo.toml
d2_serde_json/src/: main.rs
d3_server/: Cargo.toml
d3_uuid/src/: main.rs
d4_serde/src/: main.rs
d4_server/: Cargo.toml
d4_server/src/: main.rs
d5/app/: Cargo.toml
d6-refactor/app/: Cargo.toml  README.md
d7-sqlite/app/: Cargo.toml
d8/app/: Cargo.toml
d8/app/src/: main.rs  mydb.sqbpro
e1-first-server/: Cargo.toml
e1-first-server/src/: main.rs
e2-mongo/: Cargo.toml
e4-mongo-refactor/: Cargo.toml  מדריך-הפרויקט.docx  מטלה-הוספת-Product.docx
e5-mongo-refactor-bycrypt/: הצמדת-אוזניים.docx
e6-mongo-nirmool/: Cargo.toml  כמה-עולה-הגדלת-חזה-מחירון-2026.docx
z-project/: README.md  index.html  package-lock.json  package.json
(+73 files in other folders)
